Added source drop-down fields for talents and quirks.

--- a/TailsOfEquestria/sheet.html
+++ b/TailsOfEquestria/sheet.html
@@ -283,6 +283,23 @@
                               </div>
                             </div>
                             <div class="labelledUnderlined">
+                              <label>Source:</label>
+                              <div class="inner">
+                                    <select name="attr_talent_cutieMark_talentSource">
+                                        <option value="null" selected="selected">Pick One</option>
+                                        <option value="Cutie Mark">Cutie Mark</option>
+                                        <option value="Race">Race</option>
+                                        <option value="Level Up">Level Up</option>
+                                        <option value="Book">Book</option>
+                                        <option value="Item">Item</option>
+                                        <option value="Spell">Spell</option>
+                                        <option value="Story">Story</option>
+                                        <option value="Temporary">Temporary</option>
+                                        <option value="Other">Other</option>
+                                    </select>
+                              </div>
+                            </div>
+                            <div class="labelledUnderlined">
                               <label>Dice:</label>
                               <div class="inner">
                                     <select name="attr_talent_cutieMark_dice">
@@ -355,6 +372,23 @@
                               <label></label>
                               <div class="inner">
                                   <input type="text" name="attr_talent_racial_name" placeholder="Racial talent"/>
+                              </div>
+                            </div>
+                            <div class="labelledUnderlined">
+                              <label>Source:</label>
+                              <div class="inner">
+                                    <select name="attr_talent_racial_talentSource">
+                                        <option value="null" selected="selected">Pick One</option>
+                                        <option value="Cutie Mark">Cutie Mark</option>
+                                        <option value="Race">Race</option>
+                                        <option value="Level Up">Level Up</option>
+                                        <option value="Book">Book</option>
+                                        <option value="Item">Item</option>
+                                        <option value="Spell">Spell</option>
+                                        <option value="Story">Story</option>
+                                        <option value="Temporary">Temporary</option>
+                                        <option value="Other">Other</option>
+                                    </select>
                               </div>
                             </div>
                             <div class="labelledUnderlined">
@@ -431,6 +465,23 @@
                                   <label></label>
                                   <div class="inner">
                                       <input type="text" name="attr_name" placeholder=""/>
+                                  </div>
+                                </div>
+                                <div class="labelledUnderlined">
+                                  <label>Source:</label>
+                                  <div class="inner">
+                                        <select name="attr_talentSource">
+                                            <option value="null" selected="selected">Pick One</option>
+                                            <option value="Cutie Mark">Cutie Mark</option>
+                                            <option value="Race">Race</option>
+                                            <option value="Level Up">Level Up</option>
+                                            <option value="Book">Book</option>
+                                            <option value="Item">Item</option>
+                                            <option value="Spell">Spell</option>
+                                            <option value="Story">Story</option>
+                                            <option value="Temporary">Temporary</option>
+                                            <option value="Other">Other</option>
+                                        </select>
                                   </div>
                                 </div>
                                 <div class="labelledUnderlined">
@@ -511,6 +562,22 @@
                             </div>
                           </div>
                           <div class="labelledUnderlined">
+                            <label>Source:</label>
+                            <div class="inner">
+                                  <select name="attr_quirk_main_quirkSource">
+                                      <option value="null" selected="selected">Pick One</option>
+                                      <option value="Race">Race</option>
+                                      <option value="Curse">Curse</option>
+                                      <option value="Item">Item</option>
+                                      <option value="Personality">Personality</option>
+                                      <option value="Physical">Physical</option>
+                                      <option value="Story">Story</option>
+                                      <option value="Temporary">Temporary</option>
+                                      <option value="Other">Other</option>
+                                  </select>
+                            </div>
+                          </div>
+                          <div class="labelledUnderlined">
                             <label>Notes</label>
                             <div class="inner">
                                 <input type="text" name="attr_quirk_main_notes"/>
@@ -524,6 +591,22 @@
                                 <label></label>
                                 <div class="inner">
                                     <input type="text" name="attr_name"/>
+                                </div>
+                              </div>
+                              <div class="labelledUnderlined">
+                                <label>Source:</label>
+                                <div class="inner">
+                                      <select name="attr_quirkSource">
+                                          <option value="null" selected="selected">Pick One</option>
+                                          <option value="Race">Race</option>
+                                          <option value="Curse">Curse</option>
+                                          <option value="Item">Item</option>
+                                          <option value="Personality">Personality</option>
+                                          <option value="Physical">Physical</option>
+                                          <option value="Story">Story</option>
+                                          <option value="Temporary">Temporary</option>
+                                          <option value="Other">Other</option>
+                                      </select>
                                 </div>
                               </div>
                               <div class="labelledUnderlined">
