[EP2] Small fix

--- a/Eclipse Phase V2/Eclipse Phase V2.html
+++ b/Eclipse Phase V2/Eclipse Phase V2.html
@@ -4647,7 +4647,7 @@
 				<label>
 					<button type="roll" name="roll_combat-melee" value="
 					@{gm} &{template:EPdefault} {{name=^{melee}}} {{subname=^{score}}} {{subskill=@{spe-melee}}} {{roll=[[[[1D100-1]]]]}} {{target=[[[[@{total-melee}]]-[[@{malus}]]]]}} {{title-roll=^{roll}}} {{title-modifiers=^{modifiers}}} {{modifiers=[[[[(0-@{malus})]]]]}}">
-						<div class="apt-title center"  data-i18n="melee">Melee</div>
+						<span class="apt-title center"  data-i18n="melee">Melee</span>
 					</button>
 				</label>
 			</div>
