change whisper to a switch

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -7,11 +7,12 @@
 <!--TABS & LOGO-->
 <!-- =============================-->
 <div class="tabs grid">
-  <!-- Buttons to toggle on GM whisper-->
-  <input class="whisper-toggle" name="attr_gm_toggle" type="hidden" value=" "/>
-  <button data-i18n-title="gm whisper toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span><span class="hidden" data-i18n="current status:">current status:<span class="on" data-i18n="on">on</span><span class="off" data-i18n="off">off</span></span></button>
+  <!-- Buttons to toggle on GM whisper--><span data-i18n="GM Whisper">GM Whisper</span>
+  <label class="switch" data-i18n="whisper rolls to gm" title="whisper rolls to gm">
+    <input class="whisper-toggle" name="attr_gm_toggle" type="checkbox" value="/w gm"/><span class="slider"></span>
+  </label>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
-  <!-- CHARACTER SHEETS-->
+  <!-- CHARACTER SHEETS--><span data-i18n="Sheet Type">Sheet Type</span>
   <select name="attr_sheet_type">
     <optgroup label="Sheet Type">
       <option data-i18n="pc" value="pc">pc</option>
@@ -1138,13 +1139,6 @@
         let newString = (oldString.includes(`${attr}`)) ? oldString.replace(`${attr},`, '') : `${oldString}${attr},`;
         return newString
 	};
-
-	// === GM WHISPER TOGGLES
-	on('clicked:whisper', (eventinfo) => {
-		getAttrs(['gm_toggle'], (values) => {
-			setAttributes({gm_toggle: (values.gm_toggle.includes('gm')) ?  ' ' : '/w gm'}, true);
-		});
-	});
 
 	// === SHEET VERSIONING
 	on('sheet:opened', () => {
