npc near done, skills needed

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -7,8 +7,8 @@
 <!--TABS & LOGO-->
 <!-- =============================-->
 <div class="tabs grid">
-  <!-- Buttons to toggle on GM whisper--><span data-i18n="GM Whisper">GM Whisper</span>
-  <label class="switch" data-i18n="whisper rolls to gm" title="whisper rolls to gm">
+  <!-- Buttons to toggle on GM whisper--><span data-i18n-title="GM Whisper">GM Whisper</span>
+  <label class="switch" data-i18-titlen="whisper rolls to gm" title="whisper rolls to gm">
     <input class="whisper-toggle" name="attr_gm_toggle" type="checkbox" value="/w gm"/><span class="slider"></span>
   </label>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
@@ -29,72 +29,102 @@
         <input data-i18n-placeholder="character name" name="attr_name" placeholder="Character name" title="@{name}" type="text" value=""/>
       </label>
     </div>
-    <div class="section-body">
-      <div class="section">
-        <button name="strength" data-i18n-title="strength roll" title="strength roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{STR}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h1 data-i18n="STR">STR</h1>
-        </button>
-        <label data-i18n-title="strength" title="strength">
-          <input data-i18n-placeholder="10" min="0" name="attr_strength" placeholder="10" title="@{strength}" type="number" value="10"/>
-        </label>
-        <button name="constitution" data-i18n-title="constitution roll" title="constitution roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{CON}}} {{subheader=@{constitution}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h1 data-i18n="CON">CON</h1>
-        </button>
-        <label data-i18n-title="constitution" title="constitution">
-          <input data-i18n-placeholder="10" min="0" name="attr_constitution" placeholder="10" title="@{constitution}" type="number" value="10"/>
-        </label>
-        <button name="dexterity" data-i18n-title="dexterity roll" title="dexterity roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{DEX}}} {{subheader=@{dexterity}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h1 data-i18n="DEX">DEX</h1>
-        </button>
-        <label data-i18n-title="dexterity" title="dexterity">
-          <input data-i18n-placeholder="10" min="0" name="attr_dexterity" placeholder="10" title="@{dexterity}" type="number" value="10"/>
-        </label>
-        <button name="intelligence" data-i18n-title="intelligence roll" title="intelligence roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{INT}}} {{subheader=@{intelligence}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h1 data-i18n="INT">INT</h1>
-        </button>
-        <label data-i18n-title="intelligence" title="intelligence">
-          <input data-i18n-placeholder="10" min="0" name="attr_intelligence" placeholder="10" title="@{intelligence}" type="number" value="10"/>
-        </label>
-        <button name="power" data-i18n-title="power roll" title="power roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{POW}}} {{subheader=@{power}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h1 data-i18n="POW">POW</h1>
-        </button>
-        <label data-i18n-title="power" title="power">
-          <input data-i18n-placeholder="10" min="0" name="attr_power" placeholder="10" title="@{power}" type="number" value="10"/>
-        </label>
-        <button name="charisma" data-i18n-title="charisma roll" title="charisma roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{CHA}}} {{subheader=@{charisma}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
-          <h1 data-i18n="CHA">CHA</h1>
-        </button>
-        <label data-i18n-title="charisma" title="charisma">
-          <input data-i18n-placeholder="10" min="0" name="attr_charisma" placeholder="10" title="@{charisma}" type="number" value="10"/>
-        </label>
+    <div class="grid section-body">
+      <label class="row" data-i18n-title="enter npc description" title="enter npc description">
+        <textarea name="attr_npc_description" placeholder="description"></textarea>
+      </label>
+      <button name="strength" data-i18n-title="strength roll" title="strength roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{STR}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <h1 data-i18n="STR">STR</h1>
+      </button>
+      <label data-i18n-title="strength" title="strength">
+        <input data-i18n-placeholder="10" min="0" name="attr_strength" placeholder="10" title="@{strength}" type="number" value="10"/>
+      </label>
+      <button name="constitution" data-i18n-title="constitution roll" title="constitution roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{CON}}} {{subheader=@{constitution}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <h1 data-i18n="CON">CON</h1>
+      </button>
+      <label data-i18n-title="constitution" title="constitution">
+        <input data-i18n-placeholder="10" min="0" name="attr_constitution" placeholder="10" title="@{constitution}" type="number" value="10"/>
+      </label>
+      <button name="dexterity" data-i18n-title="dexterity roll" title="dexterity roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{DEX}}} {{subheader=@{dexterity}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <h1 data-i18n="DEX">DEX</h1>
+      </button>
+      <label data-i18n-title="dexterity" title="dexterity">
+        <input data-i18n-placeholder="10" min="0" name="attr_dexterity" placeholder="10" title="@{dexterity}" type="number" value="10"/>
+      </label>
+      <button name="intelligence" data-i18n-title="intelligence roll" title="intelligence roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{INT}}} {{subheader=@{intelligence}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <h1 data-i18n="INT">INT</h1>
+      </button>
+      <label data-i18n-title="intelligence" title="intelligence">
+        <input data-i18n-placeholder="10" min="0" name="attr_intelligence" placeholder="10" title="@{intelligence}" type="number" value="10"/>
+      </label>
+      <button name="power" data-i18n-title="power roll" title="power roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{POW}}} {{subheader=@{power}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <h1 data-i18n="POW">POW</h1>
+      </button>
+      <label data-i18n-title="power" title="power">
+        <input data-i18n-placeholder="10" min="0" name="attr_power" placeholder="10" title="@{power}" type="number" value="10"/>
+      </label>
+      <button name="charisma" data-i18n-title="charisma roll" title="charisma roll" type="roll" value="@{gm_toggle} &{template:rolls} {{header=^{CHA}}} {{subheader=@{charisma}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">
+        <h1 data-i18n="CHA">CHA</h1>
+      </button>
+      <label data-i18n-title="charisma" title="charisma">
+        <input data-i18n-placeholder="10" min="0" name="attr_charisma" placeholder="10" title="@{charisma}" type="number" value="10"/>
+      </label>
+      <h1 data-i18n="HP">HP</h1>
+      <label data-i18n-title="enter hit points" title="enter hit points">
+        <input data-i18n-placeholder="10" name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number" value=""/>
+      </label>
+      <h1 data-i18n="WP">WP</h1>
+      <label data-i18n-title="enter willpower points" title="enter willpower points">
+        <input data-i18n-placeholder="10" name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number" value=""/>
+      </label>
+      <h1 data-i18n="armor">ARMOR</h1>
+      <label data-i18n-title="enter armor text" title="enter armor text">
+        <input data-i18n-placeholder="8 points of thick hide" name="attr_armor" placeholder="8 points of thick hide" title="@{armor}" type="text" value=""/>
+      </label>
+      <h1 data-i18n="skills">skills</h1>
+      <h1 data-i18n="attacks">attacks</h1>
+      <div class="repeating-container attacks">
+        <div class="grid section-header">
+          <h2 data-i18n="attack">attack</h2>
+          <h2 data-i18n="skill %">skill %</h2>
+          <h2 data-i18n="damage">damage</h2>
+          <h2 data-i18n="notes">notes</h2>
+        </div>
+        <fieldset class="repeating_weapons">
+          <div class="grid section-weapons border-bottom">
+            <label data-i18n-title="attack input" title="attack input">
+              <input data-i18n-placeholder="attack" name="attr_attack" placeholder="attack" title="@{repeating_weapons_${x}_attack}" type="text" value=""/>
+            </label>
+            <label data-i18n-title="skill % input" title="skill % input">
+              <input data-i18n-placeholder="skill %" name="attr_skill_percent" placeholder="skill %" title="@{repeating_weapons_${x}_skill_percent}" type="number" value=""/>
+            </label>
+            <label data-i18n-title="damage input" title="damage input">
+              <input data-i18n-placeholder="damage" name="attr_damage" placeholder="damage" title="@{repeating_weapons_${x}_damage}" type="text" value=""/>
+            </label>
+            <label data-i18n-title="notes input" title="notes input">
+              <input data-i18n-placeholder="notes" name="attr_notes" placeholder="notes" title="@{repeating_weapons_${x}_notes}" type="text" value=""/>
+            </label>
+            <button class="dicefontd10" name="attack" type="roll" title="attack roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=@{skill_percent}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}} {{damage=^{damage} [@{damage}](~repeating_weapons_damage)}}">k</button>
+            <button class="none" name="roll_damage" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=^{damage}}} {{damage=[[@{damage}]]}}"></button>
+          </div>
+        </fieldset>
       </div>
-      <div class="section">
-        <h1 data-i18n="HP">HP</h1>
-        <label data-i18n-title="enter hit points" title="enter hit points">
-          <input data-i18n-placeholder="10" name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number" value=""/>
-        </label>
-        <h1 data-i18n="WP">WP</h1>
-        <label data-i18n-title="enter willpower points" title="enter willpower points">
-          <input data-i18n-placeholder="10" name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number" value=""/>
-        </label>
-      </div>
-      <div class="section">
-        <h1 data-i18n="armor">ARMOR
-          <label data-i18n-title="enter armor text" title="enter armor text">
-            <input data-i18n-placeholder="8 points of thick hide" name="attr_armor" placeholder="8 points of thick hide" title="@{armor}" type="text" value=""/>
-          </label>
-        </h1>
-      </div>
-      <div class="section">
-        <h1 data-i18n="skills">skills</h1>
-      </div>
-      <div class="section">
-        <h1 data-i18n="attacks">attacks</h1>
-      </div>
-      <div class="section">
-        <h1 data-i18n="other notes">other notes
-          <textarea name="attr_other_notes"></textarea>
-        </h1>
+      <h1 data-i18n="other notes">other notes</h1>
+      <div class="repeating-container notes">
+        <div class="grid section-header">
+          <h2 data-i18n="name">name</h2>
+          <h2 data-i18n="notes">notes</h2>
+        </div>
+        <fieldset class="repeating_other">
+          <div class="grid section border-bottom">
+            <label data-i18n-title="other notes name" title="other notes name">
+              <input name="attr_name" placeholder="name" title="@{repeating_other_${x}_name}" type="text"/>
+            </label>
+            <label data-i18n-title="other notes" title="other notes">
+              <input name="attr_notes" placeholder="notes" title="@{repeating_other_${x}_notes}" type="text"/>
+            </label>
+          </div>
+        </fieldset>
       </div>
     </div>
   </div>
