--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -71,17 +71,35 @@
       </label>
       <h1 data-i18n="HP">HP</h1>
       <label data-i18n-title="enter hit points" title="enter hit points">
-        <input data-i18n-placeholder="10" name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number" value=""/>
+        <input class="text-align-left" data-i18n-placeholder="10" name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number" value=""/>
       </label>
       <h1 data-i18n="WP">WP</h1>
       <label data-i18n-title="enter willpower points" title="enter willpower points">
-        <input data-i18n-placeholder="10" name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number" value=""/>
+        <input class="text-align-left" data-i18n-placeholder="10" name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number" value=""/>
       </label>
       <h1 data-i18n="armor">ARMOR</h1>
       <label data-i18n-title="enter armor text" title="enter armor text">
         <input data-i18n-placeholder="8 points of thick hide" name="attr_armor" placeholder="8 points of thick hide" title="@{armor}" type="text" value=""/>
       </label>
       <h1 data-i18n="skills">skills</h1>
+      <div class="repeating-container skills">
+        <div class="grid section-header">
+          <h2 data-i18n="skill">skill</h2>
+          <h2 data-i18n="rank">rank</h2>
+          <h2 data-i18n="roll">roll</h2>
+        </div>
+        <fieldset class="repeating_skills">
+          <div class="grid section-skills border-bottom">
+            <label data-i18n-title="skill name" title="skill name">
+              <input class="center" data-i18n-placeholder="skill name" name="attr_name" placeholder="skill name" title="@{repeating_skills_${x}_name}" type="text" value=""/>
+            </label>
+            <label data-i18n-title="skill rank" title="skill rank">
+              <input data-i18n-placeholder="0" name="attr_rank" title="@{repeating_skills_${x}_rank}" placeholder="0" type="number" value=""/>
+            </label>
+            <button class="dicefontd10" data-i18n-title="skill roll" name="skill roll" title="skill roll" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{name}}} {{subheader=@{rank}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">k</button>
+          </div>
+        </fieldset>
+      </div>
       <h1 data-i18n="attacks">attacks</h1>
       <div class="repeating-container attacks">
         <div class="grid section-header">
@@ -104,8 +122,8 @@
             <label data-i18n-title="notes input" title="notes input">
               <input data-i18n-placeholder="notes" name="attr_notes" placeholder="notes" title="@{repeating_weapons_${x}_notes}" type="text" value=""/>
             </label>
-            <button class="dicefontd10" name="attack" type="roll" title="attack roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=@{skill_percent}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}} {{damage=^{damage} [@{damage}](~repeating_weapons_damage)}}">k</button>
-            <button class="none" name="roll_damage" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{weapons}}} {{subheader=^{damage}}} {{damage=[[@{damage}]]}}"></button>
+            <button class="dicefontd10" name="attack" type="roll" title="attack roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{attack}}} {{subheader=@{skill_percent}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}} {{damage=^{damage} [@{damage}](~repeating_weapons_damage)}}">k</button>
+            <button class="none" name="roll_damage" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{attack}}} {{subheader=^{damage}}} {{damage=[[@{damage}]]}}"></button>
           </div>
         </fieldset>
       </div>
@@ -118,10 +136,10 @@
         <fieldset class="repeating_other">
           <div class="grid section border-bottom">
             <label data-i18n-title="other notes name" title="other notes name">
-              <input name="attr_name" placeholder="name" title="@{repeating_other_${x}_name}" type="text"/>
+              <input data-i18n-placeholder="name" name="attr_name" placeholder="name" title="@{repeating_other_${x}_name}" type="text"/>
             </label>
             <label data-i18n-title="other notes" title="other notes">
-              <input name="attr_notes" placeholder="notes" title="@{repeating_other_${x}_notes}" type="text"/>
+              <input data-i18n-placeholder="notes" name="attr_notes" placeholder="notes" title="@{repeating_other_${x}_notes}" type="text"/>
             </label>
           </div>
         </fieldset>
@@ -906,7 +924,7 @@
               <label data-i18n-title="skill name" title="skill name">
                 <input class="center" data-i18n-placeholder="skill name" name="attr_name" placeholder="skill name" title="@{repeating_skills_${x}_name}" type="text" value=""/>
               </label>
-              <button class="dicefontd10" data-i18n-title="skill roll" name="skill roll" title="skill roll" type="roll" value="">k</button>
+              <button class="dicefontd10" data-i18n-title="skill roll" name="skill roll" title="skill roll" type="roll" value="@{gm_toggle} &amp;{template:rolls} {{header=@{name}}} {{subheader=@{rank}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}">k</button>
               <div class="vert-line"></div>
               <label data-i18n-title="skill rank" title="skill rank">
                 <input data-i18n-placeholder="0" name="attr_rank" title="@{repeating_skills_${x}_rank}" placeholder="0" type="number" value=""/>
